# ros2_navi

./: README.md  readme.md
robot_description/: setup.py
robot_description/launch/: gazebo_sim.launch.py
robot_description/robot_description/: package.xml
robot_description/robot_description/urdf/: robot_description.urdf
robot_description/urdf/: robot_description.csv  robot_description.urdf
robot_description/world/: custom_room.world
src/robot_application/: package.xml  setup.cfg  setup.py
src/robot_application/robot_application/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py  waypoint_follower.py
src/robot_description/: CMakeLists.txt  package.xml  setup.py
src/robot_description/config/: robot_ros2_controller.yaml
src/robot_description/launch/: display_rviz2.launch.py  gazebo.launch.py  gazebo_sim.launch.py
src/robot_description/urdf/: base.urdf.xacro  common_inertia.xacro  robot.ros2_control.xacro  robot.urdf.xacro  (+1 more)
src/robot_navigation2/: CMakeLists.txt  package.xml
src/src/robot_description/: package.xml
src/src/robot_description/config/: robot_ros2_controller.yaml
src/src/robot_description/launch/: gazebo_sim.launch.py
src/src/robot_description/urdf/: base.urdf.xacro  common_inertia.xacro  robot.ros2_control.xacro  robot.urdf.xacro
src/src/robot_description/urdf/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/src/robot_description/urdf/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
src/src/robot_description/urdf/sensor/: imu.urdf.xacro  laser.urdf.xacro
src/src/robot_description/world/room/: model.sdf
(+18 files in other folders)
